fix up extends 'aialieneer/base.html' page errors

--- a/Al_ALIENEER/aialieneer/templates/aialieneer/about.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/about.html
@@ -1,284 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
 {% extends 'aialieneer/base.html' %}
-{% block body %}
-<!-- about-page -->
 
-<body >
-    <div class="about-page">
-        <div class="page-header">
-            <div class="page-header-overlay">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12">
-                            <header class="entry-header">
-                                <!-- <h1>About</h1> -->
-                                {% block title %}  About  {% endblock %}
-                            </header><!-- .entry-header -->
-                        </div><!-- .col -->
-                    </div><!-- .row -->
-                </div><!-- .container -->
-            </div><!-- .page-header-overlay -->
-        </div><!-- .page-header -->
-    
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="breadcrumbs">
-                        <ul class="flex flex-wrap align-items-center p-0 m-0">
-                            <li><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
-                            <li>About</li>
-                        </ul>
-                    </div><!-- .breadcrumbs -->
-                </div><!-- .col -->
-            </div><!-- .row -->
-    
-            <div class="row">
-                <div class="col-12">
-                    <div class="about-heading pt-1 pt-md-5 pt-lg-5 pt-xl-0">
-                        <h2 class="entry-title mt-5">Welcome to AI_ENGINEER</h2>
-    
-                        <p>Excepteur cupidatat blacks are not excepteur are at fault, which is soothing to abandon their responsibilities.</p>
-                    </div><!-- .about-heading -->
-                </div><!-- .col -->
-    
-                <div class="col-12 col-lg-6">
-                    <div class="about-stories">
-                        <h3>Our Stories</h3>
-    
-                        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.</p>
-    
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis eros lobortis, vestibulum turpis ac, pulvinar odio. </p>
-    
-                        <ul class="p-0 m-0 green-ticked">
-                            <li>Learning program with after-school</li>
-                            <li>Positive learning environment</li>
-                            <li>Learning through play</li>
-                        </ul><!-- .green-ticked -->
-                    </div><!-- .about-stories -->
-                </div><!-- .col -->
-    
-                <div class="col-12 col-lg-6">
-                    <div class="about-values">
-                        <h3>Our Stories</h3>
-    
-                        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.</p>
-    
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque quis eros lobortis, vestibulum turpis ac, pulvinar odio. </p>
-    
-                        <ul class="p-0 m-0 green-ticked">
-                            <li>Learning program with after-school</li>
-                            <li>Positive learning environment</li>
-                            <li>Learning through play</li>
-                        </ul><!-- .green-ticked -->
-                    </div><!-- .about-values -->
-                </div><!-- .col -->
-            </div><!-- .row -->
-        </div><!-- .container -->
-    </div>
-        
-    
+{% block title %} About {% endblock %}
 
-    <section class="about-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-lg-6 align-content-lg-stretch">
-                    <header class="heading">
-                        <h2 class="entry-title">About Ezuca</h2>
-
-                        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.</p>
-                    </header><!-- .heading -->
-
-                    <div class="entry-content ezuca-stats">
-                        <div class="stats-wrap flex flex-wrap justify-content-lg-between">
-                            <div class="stats-count">
-                                50<span>M+</span>
-                                <p>STUDENTS LEARNING</p>
-                            </div><!-- .stats-count -->
-
-                            <div class="stats-count">
-                                30<span>K+</span>
-                                <p>ACTIVE COURSES</p>
-                            </div><!-- .stats-count -->
-
-                            <div class="stats-count">
-                                340<span>M+</span>
-                                <p>INSTRUCTORS ONLINE</p>
-                            </div><!-- .stats-count -->
-
-                            <div class="stats-count">
-                                20<span>+</span>
-                                <p>Country Reached</p>
-                            </div><!-- .stats-count -->
-                        </div><!-- .stats-wrap -->
-                    </div><!-- .ezuca-stats -->
-                </div><!-- .col -->
-
-                <div class="col-12 col-lg-6 flex align-content-center mt-5 mt-lg-0">
-                    <div class="ezuca-video position-relative">
-                        <div class="video-play-btn position-absolute">
-                            <img src="{% static 'aialieneer/images/video-icon.png' %}" alt="Video Play">
-                        </div><!-- .video-play-btn -->
-
-                        <img src="{% static 'aialieneer/images/video-screenshot.png' %}" alt="">
-                    </div><!-- .ezuca-video -->
-                </div><!-- .col -->
-            </div><!-- .row -->
-        </div><!-- .container -->
-    </section><!-- .about-section -->
-
-    <section class="testimonial-section">
-        <!-- Swiper -->
-        <div class="swiper-container testimonial-slider">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-12 col-lg-6 order-2 order-lg-1 flex align-items-center mt-5 mt-lg-0">
-                                <figure class="user-avatar">
-                                    <img src="{% static 'aialieneer/images/user-1.jpg' %}" alt="">
-                                </figure><!-- .user-avatar -->
-                            </div><!-- .col -->
-
-                            <div class="col-12 col-lg-6 order-1 order-lg-2 content-wrap h-100">
-                                <div class="entry-content">
-                                    <p>Together as teachers, students and universities we can help make this education available for everyone.</p>
-                                </div><!-- .entry-content -->
-
-                                <div class="entry-footer">
-                                    <h3 class="testimonial-user">Russell Stephens - <span>University in UK</span></h3>
-                                </div><!-- .entry-footer -->
-                            </div><!-- .col -->
-                        </div><!-- .row -->
-                    </div><!-- .container -->
-                </div><!-- .swiper-slide -->
-
-                <div class="swiper-slide">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-12 col-lg-6 order-2 order-lg-1 flex align-items-center mt-5 mt-lg-0">
-                                <figure class="user-avatar">
-                                    <img src="{% static 'aialieneer/images/user-2.jpg' %}" alt="">
-                                </figure><!-- .user-avatar -->
-                            </div><!-- .col -->
-
-                            <div class="col-12 col-lg-6 order-1 order-lg-2 content-wrap h-100">
-                                <div class="entry-content">
-                                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                                </div><!-- .entry-content -->
-
-                                <div class="entry-footer">
-                                    <h3 class="testimonial-user">Robert Stephens - <span>University in Oxford</span></h3>
-                                </div><!-- .entry-footer -->
-                            </div><!-- .col -->
-                        </div><!-- .row -->
-                    </div><!-- .container -->
-                </div><!-- .swiper-slide -->
-
-                <div class="swiper-slide">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-12 col-lg-6 flex order-2 order-lg-1 align-items-center mt-5 mt-lg-0">
-                                <figure class="user-avatar">
-                                    <img src="{% static 'aialieneer/images/user-3.jpg' %}" alt="">
-                                </figure><!-- .user-avatar -->
-                            </div><!-- .col -->
-
-                            <div class="col-12 col-lg-6 order-1 order-lg-2 content-wrap h-100">
-                                <div class="entry-content">
-                                    <p>Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
-                                </div><!-- .entry-content -->
-
-                                <div class="entry-footer">
-                                    <h3 class="testimonial-user">James Stephens - <span>University in Cambridge</span></h3>
-                                </div><!-- .entry-footer -->
-                            </div><!-- .col -->
-                        </div><!-- .row -->
-                    </div><!-- .container -->
-                </div><!-- .swiper-slide -->
-            </div><!-- .swiper-wrapper -->
-
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-lg-6 mt-5 mt-lg-0">
-                        <div class="swiper-pagination position-relative flex justify-content-center align-items-center"></div>
-                    </div><!-- .col -->
-                </div><!-- .row -->
-            </div><!-- .container -->
-        </div><!-- .testimonial-slider -->
-    </section><!-- .testimonial-section -->
-
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="team-heading">
-                    <h2 class="entry-title">Meet Our Team</h2>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit.</p>
-                </div><!-- .team-heading -->
-            </div><!-- .col -->
-
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="team-member">
-                    <img src="{% static 'aialieneer/images/team-1.jpg' %}" alt="">
-
-                    <h3>Mr. John Wick</h3>
-                    <h4>Materials</h4>
-
-                    <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
-                        <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-                    </ul>
-                </div><!-- .team-member -->
-            </div><!-- .col -->
-
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="team-member">
-                    <img src="{% static 'aialieneer/images/team-2.jpg' %} " alt="">
-
-                    <h3>Michelle Golden</h3>
-                    <h4>WordPress</h4>
-
-                    <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
-                        <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-                    </ul>
-                </div><!-- .team-member -->
-            </div><!-- .col -->
-
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="team-member">
-                    <img src="{% static 'aialieneer/images/team-3.jpg' %}" alt="">
-
-                    <h3>Ms. Lucius</h3>
-                    <h4>Data Analysis</h4>
-
-                    <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
-                        <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-                    </ul>
-                </div><!-- .team-member -->
-            </div><!-- .col -->
-
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="team-member">
-                    <img src="{% static 'aialieneer/images/team-4.jpg' %}" alt="">
-
-                    <h3>Ms. Lara Croft </h3>
-                    <h4>HTML CSS</h4>
-
-                    <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
-                        <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-                    </ul>
-                </div><!-- .team-member -->
-            </div><!-- .col -->
-        </div><!-- .row -->
-    </div><!-- .container -->
-
-</body>
-{% endblock %}
-</html>
+{% block body %} This is about about about {% endblock %}
