--- a/Al_ALIENEER/aialieneer/templates/aialieneer/base1.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/base1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+{% load static %}
 <html lang="en">
     
 <head>
@@ -7,11 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}  AI_ALIENEER  {% endblock %}</title>
-    {% load static %}
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% block css %}
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'aialieneer/css/bootstrap.min.css' %}">
     
@@ -38,17 +38,16 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="{% static 'aialieneer/style.css' %}">
-    {% endblock %}
+    
     
 </head>
 
 
 
 <body>
-    
+   
     <!-- Header Start -->
     <header class="site-header">
-        {% block header %}
         <div class="top-header-bar">
             <div class="container-fluid">
                 <div class="row">
@@ -82,13 +81,11 @@
         </div><!-- .top-header-bar -->
 
         <div class="nav-bar">
-            {% block nav %}
             <div class="container">
                 <div class="row">
                     <div class="col-9 col-lg-3">
-                        
                         <div class="site-branding">
-                            <h1 class="site-title"><a href="index.html" rel="home">AI<span>ALIENEER</span></a></h1>
+                            <h1 class="site-title"><a href="index.html" rel="home">AI<span>ENGINEER</span></a></h1>
                         </div><!-- .site-branding -->
                     </div><!-- .col -->
 
@@ -116,16 +113,13 @@
                     </div><!-- .col -->
                 </div><!-- .row -->
             </div><!-- .container -->
-            {% endblock %}
         </div><!-- .nav-bar -->
-        {% endblock %}
     </header><!-- .site-header -->
     <!-- Header End -->
-    {% block body %} {% endblock %}
-    
+   
+
 
     <div class="clients-logo">
-        {% block logo %}  
         <div class="container">
             <div class="row">
                 <div class="col-12 flex flex-wrap justify-content-center justify-content-lg-between align-items-center">
@@ -151,12 +145,10 @@
                 </div><!-- .col -->
             </div><!-- .row -->
         </div><!-- .container -->
-        {% endblock %}
     </div><!-- .clients-logo -->
-   
+    
     <!-- Footer Statrt -->
     <footer class="site-footer">
-        {% block footer %}
         <div class="footer-widgets">
             <div class="container">
                 <div class="row">
@@ -244,18 +236,17 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div><!-- .row -->
             </div><!-- .container -->
         </div><!-- .footer-bar -->
-        {% endblock %}
     </footer><!-- .site-footer -->
     <!-- Footer End -->
-{% block javascript %}
+    
 <script type="text/javascript" src="{% static 'aialieneer/js/jquery.js' %}"></script>
 <script type="text/javascript" src="{% static 'aialieneer/js/swiper.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'aialieneer/js/masonry.pkgd.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'aialieneer/js/jquery.collapsible.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'aialieneer/js/custom.js' %}"></script>
-{% endblock %}
+
 
     
-<!-- </body> -->
+</body>
 
 </html>
