--- a/templates/aialieneer/index.html
+++ b/templates/aialieneer/index.html
@@ -1,12 +1,12 @@
+
+
 {% extends "aialieneer/base.html" %}
 
 {% block title %}  AI_ALIENEER  {% endblock %}
 
-
-
-<body>
+{% load static%}
 {% block body %} 
-{% load static %}
+<body>
     <div class="hero-content">
         <div class="hero-content-overlay">
             <div class="container">
@@ -714,4 +714,5 @@
         </div><!-- .gallery-wrap -->
     </section><!-- .home-gallery -->
 
+</body>
 {% endblock %}
