--- a/Al_ALIENEER/aialieneer/templates/aialieneer/index1.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/index1.html
@@ -1,12 +1,12 @@
+
+
 {% extends "aialieneer/base.html" %}
 
 {% block title %}  AI_ALIENEER  {% endblock %}
 
-
+{% load static %}
 
 <body>
-{% block body %} 
-{% load static %}
     <div class="hero-content">
         <div class="hero-content-overlay">
             <div class="container">
@@ -714,4 +714,4 @@
         </div><!-- .gallery-wrap -->
     </section><!-- .home-gallery -->
 
-{% endblock %}
+</body>
