edit base and index.html

--- a/Al_ALIENEER/aialieneer/templates/aialieneer/base.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 
 <html lang="en">
@@ -7,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}  AI_ALIENEER  {% endblock %}</title>
-    {% load static %}
+    
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -167,7 +168,7 @@
                             <p>They are not excepteur cupidatat excepteur blinds, there are the offices of dese is soothing to the soul, that is to blame is he who from your troubles. </p>
 
                             <p class="footer-copyright">
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://ai_engineer.blogspot.com" target="_blank">AI_ENGINEER</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://ai_alieneer.blogspot.com" target="_blank">AI_ALIENEER</a>
 </p>
                         </div><!-- .foot-about -->
                     </div><!-- .col -->
