--- a/Al_ALIENEER/aialieneer/templates/aialieneer/index.html
+++ b/Al_ALIENEER/aialieneer/templates/aialieneer/index.html
@@ -117,14 +117,14 @@
                     <header class="heading flex justify-content-between align-items-center">
                         <h2 class="entry-title">Featured Courses</h2>
 
-                        <a class="btn mt-4 mt-sm-0" href="single-courses.html">view all</a>
+                        <a class="btn mt-4 mt-sm-0" href="single-courses">view all</a>
                     </header><!-- .heading -->
                 </div><!-- .col -->
 
                 <div class="col-12 col-lg-6">
                     <div class="course-content flex flex-wrap justify-content-between align-content-lg-stretch">
                         <figure class="course-thumbnail">
-                            <a href="single-courses.html"><img src="{% static 'aialieneer/images/1.jpg' %}" alt=""></a>
+                            <a href="single-courses"><img src="{% static 'aialieneer/images/1.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -139,7 +139,7 @@
                                     <span class="course-ratings-count">(4 votes)</span>
                                 </div><!-- .course-ratings -->
 
-                                <h2 class="entry-title"><a href="single-courses.html">The Complete Android Developer Course</a></h2>
+                                <h2 class="entry-title"><a href="single-courses">The Complete Android Developer Course</a></h2>
 
                                 <div class="entry-meta flex flex-wrap align-items-center">
                                     <div class="course-author"><a href="#">Ms. Lara Croft </a></div>
@@ -160,7 +160,7 @@
                 <div class="col-12 col-lg-6">
                     <div class="course-content flex flex-wrap justify-content-between align-content-lg-stretch">
                         <figure class="course-thumbnail">
-                            <a href="single-courses.html"><img src="{% static 'aialieneer/images/2.jpg' %}" alt=""></a>
+                            <a href="single-courses"><img src="{% static 'aialieneer/images/2.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -175,7 +175,7 @@
                                     <span class="course-ratings-count">(4 votes)</span>
                                 </div><!-- .course-ratings -->
 
-                                <h2 class="entry-title"><a href="single-courses.html">Learn Photoshop, Web Design & Profitable</a></h2>
+                                <h2 class="entry-title"><a href="single-courses">Learn Photoshop, Web Design & Profitable</a></h2>
 
                                 <div class="entry-meta flex flex-wrap align-items-center">
                                     <div class="course-author"><a href="#">Mr. John Wick</a></div>
@@ -201,7 +201,7 @@
             <div class="row">
                 <div class="col-12 col-lg-6 align-content-lg-stretch">
                     <header class="heading">
-                        <h2 class="entry-title">About Ezuca</h2>
+                        <h2 class="entry-title">About AiAlieneer</h2>
 
                         <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.</p>
                     </header><!-- .heading -->
@@ -347,7 +347,7 @@
                 <div class="col-12 col-md-6 col-lg-4 px-25">
                     <div class="course-content">
                         <figure class="course-thumbnail">
-                            <a href="single-courses.html"><img src="{% static 'aialieneer/images/1.jpg' %}" alt=""></a>
+                            <a href="single-courses"><img src="{% static 'aialieneer/images/1.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -383,7 +383,7 @@
                 <div class="col-12 col-md-6 col-lg-4 px-25">
                     <div class="course-content">
                         <figure class="course-thumbnail">
-                            <a href="single-courses.html"><img src="{% static 'aialieneer/images/2.jpg' %}" alt=""></a>
+                            <a href="single-courses"><img src="{% static 'aialieneer/images/2.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -419,7 +419,7 @@
                 <div class="col-12 col-md-6 col-lg-4 px-25">
                     <div class="course-content">
                         <figure class="course-thumbnail">
-                            <a href="single-courses.html"><img src="{% static 'aialieneer/images/3.jpg' %}" alt=""></a>
+                            <a href="single-courses"><img src="{% static 'aialieneer/images/3.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -455,7 +455,7 @@
                 <div class="col-12 col-md-6 col-lg-4 px-25">
                     <div class="course-content">
                         <figure class="course-thumbnail">
-                            <a href="single-courses.html"><img src="{% static 'aialieneer/images/4.jpg' %}" alt=""></a>
+                            <a href="single-courses"><img src="{% static 'aialieneer/images/4.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -491,7 +491,7 @@
                 <div class="col-12 col-md-6 col-lg-4 px-25">
                     <div class="course-content">
                         <figure class="course-thumbnail">
-                            <a href="single-courses.html"><img src="{% static 'aialieneer/images/5.jpg' %}" alt=""></a>
+                            <a href="single-courses"><img src="{% static 'aialieneer/images/5.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -527,7 +527,7 @@
                 <div class="col-12 col-md-6 col-lg-4 px-25">
                     <div class="course-content">
                         <figure class="course-thumbnail">
-                            <a href="single-courses.html"><img src="{% static 'aialieneer/images/6.jpg' %}" alt=""></a>
+                            <a href="single-courses"><img src="{% static 'aialieneer/images/6.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="course-content-wrap">
@@ -579,7 +579,7 @@
                 <div class="col-12 col-lg-6">
                     <div class="featured-event-content">
                         <figure class="event-thumbnail position-relative m-0">
-                            <a href="single-post.html"><img src="{% static 'aialieneer/images/event-1.jpg' %}" alt=""></a>
+                            <a href="single-post"><img src="{% static 'aialieneer/images/event-1.jpg' %}" alt=""></a>
 
                             <div class="posted-date position-absolute">
                                 <div class="day">23</div>
@@ -600,7 +600,7 @@
                 <div class="col-12 col-lg-6 mt-5 mt-lg-0">
                     <div class="event-content flex flex-wrap justify-content-between align-content-stretch">
                         <figure class="event-thumbnail">
-                            <a href="single-post.html"><img src="{% static 'aialieneer/images/event-2.jpg' %}" alt=""></a>
+                            <a href="single-post"><img src="{% static 'aialieneer/images/event-2.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="event-content-wrap">
@@ -626,7 +626,7 @@
 
                     <div class="event-content flex flex-wrap justify-content-between align-content-lg-stretch">
                         <figure class="event-thumbnail">
-                            <a href="single-post.html"><img src="{% static 'aialieneer/images/event-3.jpg' %}" alt=""></a>
+                            <a href="single-post"><img src="{% static 'aialieneer/images/event-3.jpg' %}" alt=""></a>
                         </figure><!-- .course-thumbnail -->
 
                         <div class="event-content-wrap">
@@ -657,59 +657,59 @@
     <section class="home-gallery">
         <div class="gallery-wrap flex flex-wrap">
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post.html"><img src="{% static 'aialieneer/images/a.jpg' %}" alt=""></a>
+                <a href="single-post"><img src="{% static 'aialieneer/images/a.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post.html"><img src="{% static 'aialieneer/images/b.jpg' %}" alt=""></a>
+                <a href="single-post"><img src="{% static 'aialieneer/images/b.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid2x2">
-                <a href="single-post.html"><img src="{% static 'aialieneer/images/c.jpg' %}" alt=""></a>
+                <a href="single-post"><img src="{% static 'aialieneer/images/c.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post.html"><img src="{% static 'aialieneer/images/d.jpg' %}" alt=""></a>
+                <a href="single-post"><img src="{% static 'aialieneer/images/d.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post.html"><img src="{% static 'aialieneer/images/e.jpg' %}" alt=""></a>
+                <a href="single-post"><img src="{% static 'aialieneer/images/e.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid2x1">
-                <a href="single-post.html"><img src="{% static 'aialieneer/images/g.jpg' %}" alt=""></a>
+                <a href="single-post"><img src="{% static 'aialieneer/images/g.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid2x1">
-                <a href="single-post.html"><img src="{% static 'aialieneer/images/h.jpg' %}" alt=""></a>
+                <a href="single-post"><img src="{% static 'aialieneer/images/h.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post.html"><img src="{% static 'aialieneer/images/i.jpg' %}" alt=""></a>
+                <a href="single-post"><img src="{% static 'aialieneer/images/i.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid2x2 ">
-                <a href="single-post.html"><img src="{% static 'aialieneer/images/j.jpg' %}" alt=""></a>
+                <a href="single-post"><img src="{% static 'aialieneer/images/j.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post.html"><img src="{% static 'aialieneer/images/k.jpg' %}" alt=""></a>
+                <a href="single-post"><img src="{% static 'aialieneer/images/k.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post.html"><img src="{% static 'aialieneer/images/l.jpg' %}" alt=""></a>
+                <a href="single-post"><img src="{% static 'aialieneer/images/l.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid2x1">
-                <a href="single-post.html"><img src="{% static 'aialieneer/images/m.jpg' %}" alt=""></a>
+                <a href="single-post"><img src="{% static 'aialieneer/images/m.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid3x1">
-                <a href="single-post.html"><img src="{% static 'aialieneer/images/n.jpg' %}" alt=""></a>
+                <a href="single-post"><img src="{% static 'aialieneer/images/n.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
 
             <div class="gallery-grid gallery-grid1x1">
-                <a href="single-post.html"><img src="{% static 'aialieneer/images/o.jpg' %}" alt=""></a>
+                <a href="single-post"><img src="{% static 'aialieneer/images/o.jpg' %}" alt=""></a>
             </div><!-- .gallery-grid -->
         </div><!-- .gallery-wrap -->
     </section><!-- .home-gallery -->
